[package]
name = "tf_demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSD 3-Clause"
publish = false
description = """
Utilities for use with ros tf

old_tf_to_new_tf is node that looks up the transform between any two frames
and publishes out that transform with a new parent and child (it's up to the user
to prevent conflicts if the child already exists)
"""

[dependencies]
anyhow = "1.0.86"
# chrono = "0.4.38"
# serde = { version = "1.0", features = ["derive"] }
# serde-big-array = "0.5.1"
# smart-default = "0.7.1"
tokio = "1.38.0"

[dependencies.roslibrust]
# TODO(lucasw) may need to cargo clean when switching between these
# path = "../../../../../../other/src/rust/roslibrust/roslibrust"
git = "https://github.com/lucasw/roslibrust.git"
branch = "master"
# tag v0.10.1 on github is confirmed to work
# version="0.9.0"
# rev = "a1eb5a875906a26aa172a7465dd018858d191665"
# branch = "time_ops"
features = ["ros1"]

[dependencies.roslibrust_codegen]
# path = "../../../../../../other/src/rust/roslibrust/roslibrust_codegen"
git = "https://github.com/lucasw/roslibrust.git"
branch = "master"
# rev = "a1eb5a875906a26aa172a7465dd018858d191665"
# branch = "time_ops"

[dependencies.roslibrust_codegen_macro]
# path = "../../../../../../other/src/rust/roslibrust/roslibrust_codegen_macro"
git = "https://github.com/lucasw/roslibrust.git"
branch = "master"
# git = "https://github.com/lucasw/roslibrust.git"
# rev = "a1eb5a875906a26aa172a7465dd018858d191665"
# branch = "time_ops"

# cargo update tf_roslibrust to get latest version in this branch
[dependencies.tf_roslibrust]
# path = "../../../../../../other/src/rust/tf_rust_lucasw/tf_roslibrust"
git = "https://github.com/lucasw/rustros_tf.git"
branch = "roslibrust"
